src/objects/Teller_Function_Root__c.object
<CustomObject>
    <fields>
        <fullName>CssClass__c</fullName>
        <label>CssClass</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBSFunctionName__c</fullName>
        <label>EBSFunctionName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_Limit_Amount_Field_to_Check__c</fullName>
        <label>FX Limit Amount Field to Check</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_Limit_Currency_Field_to_Check__c</fullName>
        <label>FX Limit Currency Field to Check</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_Rates_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FX Rates Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <label>Page Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Adding_to_Till__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Adding to Till</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Teller Function Root</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CssClass__c</columns>
        <columns>EBSFunctionName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teller_Function_Root Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Function Roots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>